# BoostPython

./: .gitignore  CMakeLists.txt  README.md
include/: NumPyArrayData.h
src/: BoostPython.cpp  main.cpp  pyBoostPython.cpp
